got text put into proper boxes and UV index colors working

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,3 +12,11 @@ h3 {
 li {
   list-style-type: none;
 }
+
+.bg-orange {
+  background-color: #fd7e14 ;
+}
+
+.bg-violet {
+  background-color: #6f42c1;
+}
