got buttons displaying in better color, shape, and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,3 +20,10 @@ li {
 .bg-violet {
   background-color: #6f42c1;
 }
+
+button {
+  width: 100%;
+  background-color: rgb(125, 125, 145);
+  border-radius: 5px;
+  margin-top: 10px;
+}
