--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@
     border-radius: 0;
     border-bottom: 10px solid rgb(23, 20, 185);
   }
+  
+.pageBackground {
+  background-color: rgb(112, 112, 138);
+}
 
 h3 {
     font-weight: bold;
